@@ -18,7 +18,7 @@ gem_plugin:     # upload progress
 simple_xlsx_writer:    # spreadsheet
   lib:          'simple_xlsx'
 
-querybuilder:   '= 1.2.2'
+querybuilder:   '= 1.2.3'
 yamltest:       '= 0.7.0'
 safe_yaml:      '= 0.8.0'
 rubyless:       '= 0.8.11'
